--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Small module providing function validating PESEL number (Polish personal ID)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/4rlekin/pesel-check/issues"
   },
-  "homepage": "https://github.com/4rlekin/pesel-check#readme"
+  "homepage": "https://github.com/4rlekin/pesel-check#readme",
+  "devDependencies": {
+    "mocha": "^3.4.2"
+  }
 }
